--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \newcommand{\species}[1]{\textit{#1}}
 \newcommand\todo[1]{\texttt{\textcolor{red}{\textbf{TODO:} #1}}}
 \newcommand{\celsius}{$^{\circ}$C}
+\newcommand{\etal}{\textit{et~al.}}
 
 %% List only down to subsections in the table of contents;
 %% 0=chapter, 1=section, 2=subsection, 3=subsubsection, etc.
